--- a/Chrome/manifest.json
+++ b/Chrome/manifest.json
@@ -6,7 +6,13 @@
 	
 	"browser_action": {
 		"name": "Click to reload images",
-		"default_icon": "icon.png"
+		"default_icon": {
+			"19": "img/icon_19.png",
+			"38": "img/icon_38.png",
+			"128": "img/icon_128.png",
+			"256": "img/icon_256.png",
+			"512": "img/icon_512.png"
+		}
 	},
 	
 	"permissions": [
